eloquent-ruby/chapter-28/ez_ripper_statement.tt
grammar EzRipperStatement
  rule statement
    comment/delete_statement/replace_statement/print_statement
  end
  
  rule comment
    "#" .*
  end
  
  rule delete_statement
    "delete" sp quoted_argument sp
  end
  
  rule replace_statement
    "replace" sp quoted_argument sp quoted_argument sp
  end
  
  rule print_statement
    "filter" sp quoted_argument sp
  end
  
  rule quoted_argument
    "'" argument "'"
  end
  
  rule argument
    (!"'" . )*
  end
  
  rule sp
    [ \t\n]*
  end 
end
